Fix mobile section spacing

--- a/style.css
+++ b/style.css
@@ -341,5 +341,6 @@ textarea {
   }
   .section {
     padding: 50px;
+    margin: 0;
   }
 }
